--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,12 @@
 	</dependency>
 	
 	<!--jsp支持-->
+	<dependency>
+    <groupId>org.eclipse.jdt.core.compiler</groupId>
+    <artifactId>ecj</artifactId>
+    <version>4.6.1</version>
+    <scope>provided</scope>
+	</dependency>
     <!-- servlet 依赖. -->
     <dependency>
       <groupId>javax.servlet</groupId>
